# todolist

./: .env.example  .gitignore  README.md  api_main.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4233ce4bfc66_initial_schema.py  bcb9ad56c5b8_adding_at_closed_to_tasks.py
todolist/api/: routers.py
todolist/api/controller_schemas/requests/: __init__.py  project_request_schema.py  task_request_schema.py
todolist/api/controller_schemas/responses/: __init__.py  project_response_schema.py  task_response_schema.py
todolist/api/controllers/: __init__.py  projects_controller.py  tasks_controller.py
todolist/config/: setting.py
todolist/core/: models.py
todolist/core/Models/: __init__.py  models.py
todolist/core/commands/: schedule.py
todolist/core/services/: project_service.py  task_service.py
todolist/core/validation/: validation.py
todolist/data/: projects_repo.py  tasks_repo.py
todolist/db/: __init__.py  session.py
todolist/interface/CLI/: sh.py
