[project]
name = "todolist"
version = "0.1.0"
description = "todolist project with python"
authors = [
    {name = "PeymanBigdeli",email = "peymanbigdeli41@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
