[project]
name = "todolist"
version = "0.1.0"
description = "todolist project with python"
authors = [
    {name = "PeymanBigdeli",email = "peymanbigdeli41@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
